<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ass.cafeburp.dine.presentation.fragments.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_cart"
        android:name="ass.cafeburp.dine.presentation.fragments.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart">
        <action
            android:id="@+id/action_nav_cart_to_nav_place_order"
            app:destination="@id/nav_place_order" />
    </fragment>
    <fragment
        android:id="@+id/nav_place_order"
        android:name="ass.cafeburp.dine.presentation.fragments.place_order.PlaceOrderFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/fragment_place_order">
        <argument
            android:name="name"
            app:argType="string" />
        <argument
            android:name="mobile"
            app:argType="string" />
        <argument
            android:name="table"
            app:argType="string" />
        <action
            android:id="@+id/action_nav_place_order_to_nav_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/nav_home" />
    </fragment>

</navigation>